--- a/RPS.html
+++ b/RPS.html
@@ -8,9 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Computer choice:<span id="computer-choice"></span></h2>
+    <h2>User choice:<span id="user-choice"></span></h2>
+    <h2>Result:<span id="result"></span></h2>
 
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="Scissors">Scissors</button>
 
-    <script src="RPS.js"></script>
+    <script src="RPS.js" charset="utf-8"></script>
 </body>
 </html>
