--- a/RPS.html
+++ b/RPS.html
@@ -8,10 +8,12 @@
     <title>Document</title>
 </head>
 <body>
+    <!--Game choice buttons-->
     <h2>Computer choice:<span id="computer-choice"></span></h2>
     <h2>User choice:<span id="user-choice"></span></h2>
     <h2>Result:<span id="result"></span></h2>
 
+        <!--game play buttons-->
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="Scissors">Scissors</button>
