--- a/RPS.html
+++ b/RPS.html
@@ -16,7 +16,7 @@
         <!--game play buttons-->
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
-    <button id="Scissors">Scissors</button>
+    <button id="scissors">Scissors</button>
 
     <script src="RPS.js" charset="utf-8"></script>
 </body>
