--- a/RPS.html
+++ b/RPS.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
+    <link rel="stylesheet" href="RPS.css">
     <title>Document</title>
 </head>
 <body>
+    <div class="game">
     <!--Game choice buttons-->
     <h2>Computer choice: <span id="computer-choice"></span></h2>
     <h2>User choice: <span id="user-choice"></span></h2>
@@ -17,6 +19,7 @@
     <button id="rock">Rock</button>
     <button id="paper">Paper</button>
     <button id="scissors">Scissors</button>
+    </div> 
 
     <script src="RPS.js" charset="utf-8"></script>
 </body>
