--- a/RPS.html
+++ b/RPS.html
@@ -9,16 +9,18 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="game">
+    <div class="choice">
     <!--Game choice buttons-->
-    <h2>Computer choice: <span id="computer-choice"></span></h2>
-    <h2>User choice: <span id="user-choice"></span></h2>
-    <h2>Result: <span id="result"></span></h2>
+    <h2 class="Cc">Computer choice: <span id="computer-choice"></span></h2>
+    <h2 class="Cc">User choice: <span id="user-choice"></span></h2>
+    <h2 class="Cc">Result: <span id="result"></span></h2>
+    </div>
 
         <!--game play buttons-->
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
+    <div class="button">
+    <button class="Br" id="rock">Rock</button>
+    <button class="Bp" id="paper">Paper</button>
+    <button class="Bs" id="scissors">Scissors</button>
     </div> 
 
     <script src="RPS.js" charset="utf-8"></script>
