--- a/RPS.html
+++ b/RPS.html
@@ -19,8 +19,8 @@
         <!--game play buttons-->
     <div class="button">
     <button class="Br" id="rock">Rock</button>
-    <button class="Bp" id="paper">Paper</button>
-    <button class="Bs" id="scissors">Scissors</button>
+    <button class="Br" id="paper">Paper</button>
+    <button class="Br" id="scissors">Scissors</button>
     </div> 
 
     <script src="RPS.js" charset="utf-8"></script>
